--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -50,36 +50,31 @@ knitr::kable(head(insurance_data))
 
 ```{r results = "markup"}
 dim(insurance_data);
-# summary to see if there are any missing values
 summary(insurance_data);
-# number of missing values in a clearer fashion
 colSums( is.na(insurance_data) );
-# how many rows have 0 NAs
 sum( complete.cases(insurance_data) );
-# how many rows are incomplete?
 sum( !complete.cases(insurance_data) )
 ```
 
 ### Data Transformation
 
 ```{r results = "markup"}
-# check that all relevant variables are factors
 str(insurance_data);
-# setting marital status, occupation, and value flag as factors
+
 insurance_data$marital_status = as.factor(insurance_data$marital_status);
 insurance_data$occupation = as.factor(insurance_data$occupation);
 insurance_data$value_flag = as.factor(insurance_data$value_flag);
 str(insurance_data)
 ```
 ```{r results = "markup"}
-# filtering out individuals less than 25 years of age and with a cap gain of 0.
+
 num_df <- insurance_data %>%
   select(age,education_num,cap_gain,
          hours_per_week,score) %>%
   filter(age >= 25, cap_gain != 0) %>%
   arrange(age)
 
-# all data fields for the studied population
+
 all_df <- insurance_data %>%
   select(age,education_num,marital_status,
          occupation,cap_gain,hours_per_week,score,value_flag) %>%
@@ -258,24 +253,28 @@ scores_by_value_flag <- all_df %>%
   select(occupation,score,value_flag) %>%
   mutate_at(vars(occupation,value_flag),list(factor))
 
-# boxplot showing distribution of scores by occupation
+
 ggplot(scores_by_value_flag, aes(x=occupation, y=score)) +
   geom_boxplot(aes(fill=value_flag))+
   xlab("Occupation (in Categorical Groups)") +
   ylab("Insurance Scores") +
   ggtitle("Distribution of Scores by Occupation")
 ```
+The graph above explicates the association between type of occupation and score according to the
+value flag they were labeled with. It’s shown that the median scores for all types of occupations never
+go above 60 for those labeled with low. As this graph is plotting the categorical variable of occupation group against numerical variable insurance score, we see
+that the insruance score plays an important part in choosing a high value client. The groups that we categorized by the value of high rather than low always had a insurance score higher than the low value client. This can help us infer that with a higher insurance score comes a higher likely hood that the client is a high value one.
 
 
 ### Value Flags by Age, Based on Education
 ```{r}
-# getting value_flag counts for individuals of a certain age and occupation
+
 age_value_by_occupation <- all_df %>%
   filter(age >= 25) %>%
   select(age,occupation,value_flag) %>%
   group_by(value_flag,occupation,age) %>%
   summarize(count=count(value_flag == "High"| value_flag == "Low"))
-# facet wrap
+
 ggplot(data = age_value_by_occupation, mapping =
          aes(x = age, y = count, color = value_flag)) +
   geom_point() +
@@ -284,6 +283,11 @@ ggplot(data = age_value_by_occupation, mapping =
   ggtitle("Value_Flag by Age, based on Occupation") +
   facet_wrap(~occupation, nrow=2)
 ```
+The graph above looks at the total incidence of each value_flag at all ages present in dataset, while
+divided into facets based on the type of occupation. For Groups 1-3, there’s a higher number of people
+classified as low for the bulk of the recorded ages. Groups 4, 5, and NA, all do not seem to have much variablity.
+Group 4 shows the high and low value flagged clients mixed together, and the same can be said about group NA. We can conclude from these graphs
+that the age does not play a major role in the groups when observing the values flags of clients.
 
 ### Synthesis of New Variables
 ```{r}
@@ -338,7 +342,7 @@ spike when reaching 100000.
 
 ```{r results="markup"}
 set.seed(101)
-# select a sample, without replacement
+
 sample = population %>%
 sample_n(size = 200,replace = FALSE)
 
@@ -372,18 +376,15 @@ Ha : µ != 20000
 To compute the p-value, we assume that the null hypothesis is true and we’ll set the significance level at 5%.
 
 ```{r results = "markup"}
-# claimed value of the mean
+
 omean <- 20000
-# store the current sample
+
 sample_cap_gains <- sample$cap_gain
-# compute the sample mean
 mean_sample <- mean(sample_cap_gains)
 mean_sample
 ```
 
 ```{r results = "markup"}
-# store the error in estimating the average capital gains for the sample
-# distance between null value and sample mean
 c <- abs(omean - mean_sample)
 
 ```
@@ -447,26 +448,22 @@ data %>%
 ### Regression Models
 
 ``` {r results="markup"}
-# find relationship betwen age and education_num
 age_data <- all_data %>%
   group_by(age,value_flag) %>%
   summarize(avg_ed_num = mean(education_num))
 
-# 70 - 30 train test split
 train_test_split <- sample(c(TRUE,FALSE), nrow(age_data),replace=TRUE, 
                            prob=c(0.7,0.3))
 
 train_data <- age_data[train_test_split,]
 test_data <- age_data[!train_test_split,]
 
-# regression model (High)
 train_data_high <- train_data %>%
   filter(value_flag=="High")
 
 high_model = lm(train_data_high$avg_ed_num ~ train_data_high$age, data = 
                   train_data_high)
 
-# regression model (Low)
 train_data_low <- train_data %>%
   filter(value_flag=="Low")
 
@@ -474,7 +471,6 @@ low_model = lm(train_data_low$avg_ed_num ~ train_data_low$age, data =
                 train_data_low)
 
 
-# fitted plot on test_data
 ggplot(test_data,aes(x=age,y=avg_ed_num, color=value_flag))+
   geom_point() +
   xlab("Age of Policyholder") +
@@ -486,7 +482,6 @@ ggplot(test_data,aes(x=age,y=avg_ed_num, color=value_flag))+
               slope = low_model$coefficients[2],
               color = "blue")
 
-# evaluation
 test_data_high <- test_data %>%
   filter(value_flag == "High")
 test_data_low <- test_data %>%
